# libqi

./: CMakeLists.txt  README.rst  boost-build.sh  boost-configure.sh  boost-install.sh  mac-homebrew-i686.toolchain.cmake  zig.toolchain.cmake
.github/workflows/: build-check.yml
qi/: jsoncodec.hpp  registration.hpp
qi/detail/: clock.hxx  log.hxx
src/: application.cpp  log.cpp  registration.cpp
src/type/: jsoncodec_p.hpp  jsondecoder.cpp
tests/ka/: CMakeLists.txt
tests/messaging/: test_service.cpp  test_session.cpp
tests/qi/: test_application.cpp
tests/type/: test_json.cpp
